force-app/main/default/objects/msf_GDPRLog__c/msf_GDPRLog__c.object-meta.xml
<CustomObject>
    <label>Registro RGPD</label>
    <nameField>
        <displayFormat>RGPD_LOG_{0000000000}</displayFormat>
        <label>Nombre de Registro RGPD</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros RGPD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>