force-app/main/default/objects/msf_GDPRLog__c/fields/msf_Contact__c.field-meta.xml
<CustomField>
    <fullName>msf_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Registros_GDPR</relationshipName>
    <type>Lookup</type>
</CustomField>