force-app/main/default/objects/msf_GDPRLog__c/fields/msf_CRMExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_CRMExternalId__c</fullName>
    <label>Número de miembro</label>
    <length>40</length>
    <type>Text</type>
</CustomField>