force-app/main/default/objects/msf_GDPRLog__c/fields/msf_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>msf_IP_Address__c</fullName>
    <label>IP Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>