force-app/main/default/objects/msf_GDPRLog__c/fields/msf_ModificationChannel__c.field-meta.xml
<CustomField>
    <fullName>msf_ModificationChannel__c</fullName>
    <label>Canal de modificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_ModificationChannel</valueSetName>
    </valueSet>
</CustomField>