force-app/main/default/objects/msf_GDPRLog__c/fields/msf_ModificationDate__c.field-meta.xml
<CustomField>
    <fullName>msf_ModificationDate__c</fullName>
    <label>Fecha de modificación</label>
    <type>DateTime</type>
</CustomField>