force-app/main/default/objects/msf_GDPRLog__c/fields/msf_Modifications__c.field-meta.xml
<CustomField>
    <fullName>msf_Modifications__c</fullName>
    <label>Modificaciones realizadas</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>