force-app/main/default/objects/msf_GDPRLog__c/fields/msf_Object__c.field-meta.xml
<CustomField>
    <fullName>msf_Object__c</fullName>
    <label>Objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>