force-app/main/default/objects/msf_GDPRLog__c/fields/msf_PaymentProfile__c.field-meta.xml
<CustomField>
    <fullName>msf_PaymentProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Profile</label>
    <referenceTo>cpm__Payment_Profile__c</referenceTo>
    <relationshipName>Registros_GDPR</relationshipName>
    <type>Lookup</type>
</CustomField>