force-app/main/default/objects/msf_GDPRLog__c/fields/msf_RecordId__c.field-meta.xml
<CustomField>
    <fullName>msf_RecordId__c</fullName>
    <label>Id. registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>