force-app/main/default/objects/msf_GDPRLog__c/fields/msf_RecordName__c.field-meta.xml
<CustomField>
    <fullName>msf_RecordName__c</fullName>
    <label>Nombre del registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>