force-app/main/default/objects/msf_GDPRLog__c/fields/msf_User__c.field-meta.xml
<CustomField>
    <fullName>msf_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Registros_GDPR</relationshipName>
    <type>Lookup</type>
</CustomField>