force-app/main/default/objects/msf_GDPRLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>msf_Object__c</columns>
    <columns>msf_Contact__c</columns>
    <columns>msf_PaymentProfile__c</columns>
    <columns>msf_ModificationDate__c</columns>
    <columns>msf_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>